# zotero-mcp-rss

./: .env.example  .gitignore  .pre-commit-config.yaml  2026-01-29-implement-the-following-plan.txt  2026-01-30-implement-the-following-plan.txt  2026-02-11-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  ANGETS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_REMOVAL_CHECKLIST.md  CONTRIBUTING.md  EDesktopzotero-mcp.temp_original_note.txt  IMPLEMENTATION_GUIDE.md  QUICK-REFERENCE.md  README.md  SECURITY-NOTICE.md  TASKFILE.txt  TaskFile.txt  Template.yaml  apply_css_to_note.py  apply_final_clean.py  apply_inline_styles.py  apply_optimized_styles.py  check_generated_note.py  check_pdf_status.py  check_remaining_br.py  current_note.html  dedup_run.json  dedup_run_clean.json  download_si.py  get_inbox_items.py  inbox_items.json  items_need_si.json  pyproject.toml  requirements.txt  test_br_fix.py  test_provider_tag.py  test_provider_tag_v2.py  test_reduced_spacing.py  (+3 more)
.claude/: settings.local.json
.github/actions/generate-summary/: action.yml
.github/actions/setup-zotero-mcp/: action.yml
.github/workflows/: auto-analyze.yml  ci.yml  daily-rss-gmail.yml  daily-workflow.yml  deduplicate.yml  global-analysis.yml  gmail-auto.yml  gmail-ingestion.yml  item-analysis.yml  metadata-update.yml  note-update.yml  rss-ingestion.yml
.sisyphus/: COMPLETION-CHECKLIST.md  FILE-INDEX.md  FINAL-VALIDATION-REPORT.md  PROJECT-STATUS.md
.sisyphus/plans/: REFACTORING-COMPLETE.md  implementation-status.md  mcp-standardization-plan.md  phase4-5-completion.md  zotero-mcp-refactor.md
RSS/: RSS_official.opml  keywords_cache.json  prompt.txt
RSS/output/: 2026_01_13_abstracts.json  2026_01_14_title.json  2026_01_15_abstracts.json  2026_01_15_title.json  2026_01_16_title.json  2026_01_18_abstracts.json  2026_01_18_title.json  2026_01_19_title.json  2026_01_21_abstracts.json  2026_01_22_abstracts.json  2026_01_23_abstracts.json
config/: mcporter.json
docs/: BATCH-WORKFLOW.md  CLEANUP_SUMMARY.md  FUTURE-ENHANCEMENTS.md  GITHUB-ACTIONS-SETUP.md  GITHUB_ACTIONS_GUIDE.md  GMAIL-SETUP.md  INDEX.md  MIGRATION-GUIDE.md  MIGRATION_GUIDE.md  MULTIMODAL_ANALYSIS.md  RELEASE_v3.0.md  STRUCTURED-OUTPUT-EXAMPLES.md  custom-base-urls.md  getting-started.md  getting-started_zh.md  mcp_git_memory_quickstart.md  中文指南.md
docs/plans/: 2025-02-02-multimodal-pdf-analysis.md  2025-02-06-modular-refactor-design.md  2025-02-06-modular-refactor-implementation-plan.md  2025-02-06-paper-analyzer-design.md  2025-02-06-paper-feed-final-design.md  2025-02-06-paper-feed-independence.md  2025-02-06-zotero-core-design.md  2025-02-06-zotero-mcp-integration-design.md  2025-02-16-clean-tags-implementation.md  2025-02-16-tag-system-design.md  2026-02-28-obsidian-vault-restructure-design.md  2026-02-28-obsidian-vault-restructure.md  2026-03-02-tag-system-final.md  optimization_tasks.md  scripts_analysis.md  unused_modules_report.txt
docs/templates/: default_analysis_template.md  default_analysis_template_multimodal.md
examples/: workflow_example.py
modules/paper-analyzer/: README.md  pyproject.toml
modules/paper-analyzer/src/paper_analyzer/: __init__.py
modules/paper-analyzer/src/paper_analyzer/analyzers/: __init__.py  pdf_analyzer.py
modules/paper-analyzer/src/paper_analyzer/clients/: __init__.py  base.py  deepseek.py  openai_client.py
modules/paper-analyzer/src/paper_analyzer/extractors/: __init__.py  pdf_extractor.py
modules/paper-analyzer/src/paper_analyzer/models/: __init__.py  checkpoint.py  content.py  result.py  template.py
modules/paper-analyzer/src/paper_analyzer/templates/: __init__.py  template_manager.py
modules/paper-analyzer/tests/unit/: test_analyzer.py  test_clients.py  test_models.py  test_template_manager.py
modules/zotero-core/: IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
modules/zotero-core/examples/: item_service_example.py
modules/zotero-core/src/zotero_core/: __init__.py
modules/zotero-core/src/zotero_core/clients/: __init__.py  zotero_client.py
modules/zotero-core/src/zotero_core/models/: __init__.py  base.py  collection.py  item.py  search.py  tag.py
modules/zotero-core/src/zotero_core/services/: __init__.py  item_service.py
modules/zotero-core/tests/unit/: __init__.py  test_item_service.py  test_models.py
reports/: complexity_report.txt  maintainability_report.txt  plr_report.txt
scripts/: analyze_new_items.py  auto_analyze.py  classify_shortterms.py  clean_dd_notes_tags.py  download_dd_si.py  filter_inbox_to_aa.py  flatten_second_level_to_root.py  move_publisher_to_aa.py  organize_existing_items.py  redesign_areas_by_dimensions.py  remove_sensitive_data.py  rename_second_level_pattern.py  rename_third_level_pattern.py  restructure_para_v0.py  setup_para_folders.py  update_project_template_dimensions.py
src/RSS/: keywords_cache.json
src/scripts/: analyze_new_items.py  auto_analyze.py  fetch_rss.py  gmail_auth.py  google_scholar_to_zotero.py  organize_existing_items.py  remove_sensitive_data.py  simple_gmail_auth.py  test_filter_matching.py  test_gmail.py  test_rss_connectivity.py
src/zotero_mcp/: __init__.py  __main__.py  _version.py  chroma_client.py  cli.py  config.py  local_db.py  semantic_search.py  server.py  settings.py  setup_helper.py
src/zotero_mcp/analyzer/: __init__.py
src/zotero_mcp/cli_app/: registry.py
src/zotero_mcp/clients/: __init__.py  better_bibtex.py  chroma.py  cli_llm.py  gmail.py  (+5 more)
tests/: conftest.py  test_analysis_status.py  test_batch_loader.py  test_cli.py  test_cli_llm.py  test_config.py  test_custom_template.py  test_filter_matching.py  test_item_service.py  test_logging_config.py  test_scanner.py  test_search_service.py
tests/integration/: test_config.py  test_integration_layer.py  test_multimodal_e2e.py
tests/services/: test_common_retry.py  test_metadata_update_service.py  test_note_parser.py  test_note_relation_service.py  test_resource_service.py  test_workflow.py  test_zotero_item_creator.py
tests/tools/: test_workflow_tools.py
tests/utils/: test_mapper.py  test_templates.py  test_updater.py
(+156 files in other folders)
