[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
version = "2.5.0"
description = "A Model Context Protocol server for Zotero"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "54yyyu", email = "54yyyu@github.com" }]
keywords = ["mcp", "zotero", "model-context-protocol", "research", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.2.0",
    "pyzotero>=1.5.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "markitdown[pdf]>=0.0.1",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.7",
    "Pillow>=10.0.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "basedpyright>=1.37.2",
    "pip-audit>=2.0.0",
    "radon>=6.0.1",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
all = ["zotero-mcp[ocr]"]

[project.urls]
Homepage = "https://github.com/liuchzzyy/zotero-mcp"
Documentation = "https://stevenyuyy.us/zotero-mcp/"
Repository = "https://github.com/liuchzzyy/zotero-mcp"
"Bug Tracker" = "https://github.com/liuchzzyy/zotero-mcp/issues"
Changelog = "https://github.com/liuchzzyy/zotero-mcp/releases"

[project.scripts]
zotero-mcp = "zotero_mcp.cli_app.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ty.environment]
python-version = "3.12"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["zotero_mcp"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--showlocals"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires Zotero running)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["zotero_mcp"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
